Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-68889

warnings in qcborvalue.h

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P0: Blocker P0: Blocker
    • 5.12.0 Alpha
    • 5.12
    • Core: Other
    • None

      Since https://codereview.qt-project.org/#/c/214286/ , Long live DOM API for CBOR!

      In the build, https://testresults.qt.io/coin/integration/qt/qtbase/tasks/1528452950

      https://testresults.qt.io/coin/api/results/qt/qtbase/315be87e804fd1999397fa0152ee9c4727182a41/LinuxRHEL_7_4x86_64AndroidAndroid_ANYarmv7GCCqtci-linux-RHEL-7.4-x86_64-46ce76Release_DisableTests_OpenGLES2_NoUseGoldLinker/2a48a3b7dcb9652b1532a3ad14de7580b5b9b1ee/build_1528419483/log.txt.gz

      In file included from serialization/qjsoncbor.cpp:40:0:
      serialization/qcborvalue.h:68:25: warning: missing initializer for member 'QCborError::c' [-Wmissing-field-initializers]
           QCborError error = {};
                               ^
      ...
      In file included from serialization/qcborvalue.cpp:40:0:
      serialization/qcborvalue.h:68:25: warning: missing initializer for member 'QCborError::c' [-Wmissing-field-initializers]
           QCborError error = {};
                               ^
      ...
      In file included from ../../include/QtCore/qcborvalue.h:1:0,
                       from ../../include/QtCore/../../src/corelib/serialization/qcborarray.h:43,
                       from ../../include/QtCore/qcborarray.h:1,
                       from ../../include/QtCore/QtCore:33,
                       from ../../include/QtTest/QtTestDepends:3:
      ../../include/QtCore/../../src/corelib/serialization/qcborvalue.h:68:25: warning: missing initializer for member 'QCborError::c' [-Wmissing-field-initializers]
           QCborError error = {};
                               ^
      In file included from ../../include/QtCore/qcborvalue.h:1:0,
                       from ../../include/QtCore/../../src/corelib/serialization/qcborarray.h:43,
                       from ../../include/QtCore/qcborarray.h:1,
                       from ../../include/QtCore/QtCore:33,
                       from ../../include/QtOpenGL/QtOpenGLDepends:3:
      ../../include/QtCore/../../src/corelib/serialization/qcborvalue.h:68:25: warning: missing initializer for member 'QCborError::c' [-Wmissing-field-initializers]
           QCborError error = {};
                               ^
      In file included from ../../include/QtCore/qcborvalue.h:1:0,
                       from ../../include/QtCore/../../src/corelib/serialization/qcborarray.h:43,
                       from ../../include/QtCore/qcborarray.h:1,
                       from ../../include/QtCore/QtCore:33,
                       from ../../include/QtPrintSupport/QtPrintSupportDepends:3:
      ../../include/QtCore/../../src/corelib/serialization/qcborvalue.h:68:25: warning: missing initializer for member 'QCborError::c' [-Wmissing-field-initializers]
           QCborError error = {};
                               ^
      ...
      

       

        For Gerrit Dashboard: QTBUG-68889
        # Subject Branch Project Status CR V

            thiago Thiago Macieira
            liaqi Liang Qi
            Votes:
            0 Vote for this issue
            Watchers:
            9 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes